Added showing version of app
In about window now showing version of wallet

--- a/DCWallet/AboutWindow.xaml
+++ b/DCWallet/AboutWindow.xaml
@@ -12,6 +12,7 @@
             <Label HorizontalContentAlignment="Center" FontSize="24">DuCoWallet</Label>
             <Label HorizontalContentAlignment="Center">Created by mendabex</Label>
             <Label HorizontalContentAlignment="Center">www.vitka-k.ru</Label>
+            <Label HorizontalContentAlignment="Center" Name="AppVersionLbl"></Label>
         </StackPanel>
     </Grid>
 </Window>
